cmake_minimum_required(VERSION 3.12)
project(ALICE_RENDERE)

set(CMAKE_CXX_STANDARD 17)
set(ALICE_RENDERE_MAJOR_VERSION 1)
set(ALICE_RENDERE_MINOR_VERSION 0)
set(ALICE_RENDERE_VERSION ${ALICE_RENDERE_VERSION}.${ALICE_RENDERE_VERSION})

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(ALICE_RENDERE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# add_subdirectory(RenderCore)
add_subdirectory(GraphicsAPI)
add_subdirectory(Demo)
